Add .torchscript extension

--- a/package.json
+++ b/package.json
@@ -67,44 +67,45 @@
         "files": [ "source/**/*" ],
         "directories": { "buildResources": "./publish" },
         "fileAssociations": [
-            { "ext": "armnn",      "name": "Arm NN Model"             },
-            { "ext": "cmf",        "name": "CNTK Model"               },
-            { "ext": "dnn",        "name": "CNTK Model"               },
-            { "ext": "h5",         "name": "Keras Model"              },
-            { "ext": "hd5",        "name": "Keras Model"              },
-            { "ext": "hdf5",       "name": "Keras Model"              },
-            { "ext": "keras",      "name": "Keras Model"              },
-            { "ext": "kmodel",     "name": "Kendryte Model"           },
-            { "ext": "lite",       "name": "TensorFlow Lite Model"    },
-            { "ext": "mar",        "name": "MXNet Model"              },
-            { "ext": "meta",       "name": "TensorFlow Meta Graph"    },
-            { "ext": "mlmodel",    "name": "Core ML Model"            },
-            { "ext": "mlpackage",  "name": "Core ML Model Package", "isPackage": true },
-            { "ext": "mnn",        "name": "MNN Model"                },
-            { "ext": "model",      "name": "Model"                    },
-            { "ext": "nn",         "name": "Barracuda Model"          },
-            { "ext": "nnp",        "name": "Neural Network Libraries" },
-            { "ext": "om",         "name": "DaVinci OM Model"         },
-            { "ext": "ort",        "name": "ONNX Runtime Model"       },
-            { "ext": "pb",         "name": "Protocol Buffer"          },
-            { "ext": "pbtxt",      "name": "Text Protocol Buffer"     },
-            { "ext": "prototxt",   "name": "Text Protocol Buffer"     },
-            { "ext": "caffemodel", "name": "Caffe Model"              },
-            { "ext": "param",      "name": "NCNN Model"               },
-            { "ext": "pth",        "name": "PyTorch Model"            },
-            { "ext": "ptl",        "name": "PyTorch Model"            },
-            { "ext": "pt",         "name": "PyTorch Model"            },
-            { "ext": "t7",         "name": "Torch Model"              },
-            { "ext": "tflite",     "name": "TensorFlow Lite Model"    },
-            { "ext": "tfl",        "name": "TensorFlow Lite Model"    },
-            { "ext": "tmfile",     "name": "Tengine"                  },
-            { "ext": "paddle",     "name": "PaddlePaddle"             },
-            { "ext": "pdmodel",    "name": "PaddlePaddle"             },
-            { "ext": "pdparams",   "name": "PaddlePaddle"             },
-            { "ext": "nb",         "name": "Paddle Lite"              },
-            { "ext": "rknn",       "name": "RKNN"                     },
-            { "ext": "uff",        "name": "UFF Model"                },
-            { "ext": "xmodel",     "name": "Vitis AI Model"           }
+            { "ext": "armnn",       "name": "Arm NN Model"             },
+            { "ext": "caffemodel",  "name": "Caffe Model"              },
+            { "ext": "cmf",         "name": "CNTK Model"               },
+            { "ext": "dnn",         "name": "CNTK Model"               },
+            { "ext": "h5",          "name": "Keras Model"              },
+            { "ext": "hd5",         "name": "Keras Model"              },
+            { "ext": "hdf5",        "name": "Keras Model"              },
+            { "ext": "keras",       "name": "Keras Model"              },
+            { "ext": "kmodel",      "name": "Kendryte Model"           },
+            { "ext": "lite",        "name": "TensorFlow Lite Model"    },
+            { "ext": "mar",         "name": "MXNet Model"              },
+            { "ext": "meta",        "name": "TensorFlow Meta Graph"    },
+            { "ext": "mlmodel",     "name": "Core ML Model"            },
+            { "ext": "mlpackage",   "name": "Core ML Model Package", "isPackage": true },
+            { "ext": "mnn",         "name": "MNN Model"                },
+            { "ext": "model",       "name": "Model"                    },
+            { "ext": "nb",          "name": "Paddle Lite"              },
+            { "ext": "nn",          "name": "Barracuda Model"          },
+            { "ext": "nnp",         "name": "Neural Network Libraries" },
+            { "ext": "om",          "name": "DaVinci OM Model"         },
+            { "ext": "ort",         "name": "ONNX Runtime Model"       },
+            { "ext": "paddle",      "name": "PaddlePaddle"             },
+            { "ext": "param",       "name": "NCNN Model"               },
+            { "ext": "pb",          "name": "Protocol Buffer"          },
+            { "ext": "pbtxt",       "name": "Text Protocol Buffer"     },
+            { "ext": "pdmodel",     "name": "PaddlePaddle"             },
+            { "ext": "pdparams",    "name": "PaddlePaddle"             },
+            { "ext": "prototxt",    "name": "Text Protocol Buffer"     },
+            { "ext": "pt",          "name": "PyTorch Model"            },
+            { "ext": "pth",         "name": "PyTorch Model"            },
+            { "ext": "ptl",         "name": "PyTorch Model"            },
+            { "ext": "rknn",        "name": "RKNN"                     },
+            { "ext": "t7",          "name": "Torch Model"              },
+            { "ext": "tfl",         "name": "TensorFlow Lite Model"    },
+            { "ext": "tflite",      "name": "TensorFlow Lite Model"    },
+            { "ext": "tmfile",      "name": "Tengine"                  },
+            { "ext": "torchscript", "name": "PyTorch Model"            },
+            { "ext": "uff",         "name": "UFF Model"                },
+            { "ext": "xmodel",      "name": "Vitis AI Model"           }
         ],
         "afterSign": "./publish/notarize.js",
         "publish": [
