--- a/package.json
+++ b/package.json
@@ -83,26 +83,27 @@
             { "ext": "mlpackage",   "name": "Core ML Model Package", "isPackage": true },
             { "ext": "mnn",         "name": "MNN Model"                },
             { "ext": "model",       "name": "Model"                    },
-            { "ext": "nb",          "name": "Paddle Lite"              },
+            { "ext": "nb",          "name": "Paddle Lite Model"        },
             { "ext": "nn",          "name": "Barracuda Model"          },
             { "ext": "nnp",         "name": "Neural Network Libraries" },
             { "ext": "om",          "name": "DaVinci OM Model"         },
             { "ext": "ort",         "name": "ONNX Runtime Model"       },
-            { "ext": "paddle",      "name": "PaddlePaddle"             },
+            { "ext": "paddle",      "name": "PaddlePaddle Model"       },
             { "ext": "param",       "name": "NCNN Model"               },
             { "ext": "pb",          "name": "Protocol Buffer"          },
             { "ext": "pbtxt",       "name": "Text Protocol Buffer"     },
-            { "ext": "pdmodel",     "name": "PaddlePaddle"             },
-            { "ext": "pdparams",    "name": "PaddlePaddle"             },
+            { "ext": "pdmodel",     "name": "PaddlePaddle Model"       },
+            { "ext": "pdparams",    "name": "PaddlePaddle Model"       },
             { "ext": "prototxt",    "name": "Text Protocol Buffer"     },
             { "ext": "pt",          "name": "PyTorch Model"            },
             { "ext": "pth",         "name": "PyTorch Model"            },
             { "ext": "ptl",         "name": "PyTorch Model"            },
-            { "ext": "rknn",        "name": "RKNN"                     },
+            { "ext": "rknn",        "name": "RKNN Model"               },
             { "ext": "t7",          "name": "Torch Model"              },
             { "ext": "tfl",         "name": "TensorFlow Lite Model"    },
             { "ext": "tflite",      "name": "TensorFlow Lite Model"    },
-            { "ext": "tmfile",      "name": "Tengine"                  },
+            { "ext": "tmfile",      "name": "Tengine Model"            },
+            { "ext": "tnnproto",    "name": "TNN Model"                },
             { "ext": "torchscript", "name": "PyTorch Model"            },
             { "ext": "uff",         "name": "UFF Model"                },
             { "ext": "xmodel",      "name": "Vitis AI Model"           }
