--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
             "no-constructor-return": "error",
             "no-duplicate-imports": "error",
             "no-promise-executor-return": "error",
+            "no-self-compare": "error",
             "no-template-curly-in-string": "error",
             "no-trailing-spaces": "error",
             "no-unmodified-loop-condition": "error",
