--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
             "array-callback-return": "error",
             "brace-style": [ "error", "stroustrup", { "allowSingleLine": true } ],
             "curly": "error",
+            "consistent-return": "error",
             "default-case": "error",
             "default-case-last": "error",
             "indent": [ "error", 4, { "SwitchCase": 1 } ],
