--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
             { "ext": "nn",          "name": "Barracuda Model"          },
             { "ext": "nnp",         "name": "Neural Network Libraries" },
             { "ext": "om",          "name": "DaVinci OM Model"         },
+            { "ext": "onnx",        "name": "ONNX Model"            },
             { "ext": "ort",         "name": "ONNX Runtime Model"       },
             { "ext": "paddle",      "name": "PaddlePaddle Model"       },
             { "ext": "param",       "name": "NCNN Model"               },
