Add PaddlePaddle test file (#903)

--- a/package.json
+++ b/package.json
@@ -98,7 +98,9 @@
             { "ext": "param",       "name": "NCNN Model"               },
             { "ext": "pb",          "name": "Protocol Buffer"          },
             { "ext": "pbtxt",       "name": "Text Protocol Buffer"     },
+            { "ext": "pdiparams",   "name": "PaddlePaddle Model"       },
             { "ext": "pdmodel",     "name": "PaddlePaddle Model"       },
+            { "ext": "pdopt",       "name": "PaddlePaddle Model"       },
             { "ext": "pdparams",    "name": "PaddlePaddle Model"       },
             { "ext": "prototxt",    "name": "Text Protocol Buffer"     },
             { "ext": "pt",          "name": "PyTorch Model"            },
