--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -14067,6 +14067,117 @@
     ]
   },
   {
+    "name": "LayerNormalization",
+    "module": "ai.onnx",
+    "version": 17,
+    "support_level": "common",
+    "description": "This is layer normalization defined in ONNX as function.\n      The overall computation can be split into two stages.\n      The first stage is standardization, which makes the\n      normalized elements have zero mean and unit variances.\n      The computation required by standardization can be\n      described by the following equations.\n      ```\n      Mean = ReduceMean<axes=normalized_axes>(X)\n      D = Sub(X, Mean)\n      DD = Mul(Diff, Diff)\n      Var = ReduceMean<axes=normalized_axes>(DD)\n      VarEps = Add(Var, epsilon)\n      StdDev = Sqrt(VarEps)\n      InvStdDev = Reciprocal(StdDev)\n      Normalized = Mul(D, InvStdDev)\n      ```\n      where `normalized_axes` is `[axis, ..., rank of X - 1]`.\n      The variables `Var` and `StdDev` stand for variance and\n      standard deviation, respectively. The second output is\n      `Mean` and the last one is `InvStdDev`.\n      Depending on `stash_type` attribute, the actual computation\n      must happen in different floating-point precision.\n      For example, if `stash_type` is 1, this operator casts\n      all input variables to 32-bit float, perform the computation, and\n      finally cast `Normalized` back to the original type of `X`.\n      The second stage then scales and shifts the outcome of the\n      first stage using\n      ```\n      NormalizedScaled = Mul(Normalized, Scale)\n      Y = Add(NormalizedScaled, B)\n      ```\n      The second stage doesn't depends on `stash_type`.\n      All equations are in [this syntax](https://github.com/onnx/onnx/blob/main/docs/Syntax.md).\n      The same variable (i.e., input, output, and attribute) uses\n      the same name in the equations above and this operator's definition.\n      Let `d[i]` indicate the i-th dimension of `X`.\n      If `X`'s shape is `[d[0], ..., d[axis-1], d[axis], ..., d[rank-1]]`,\n      the shape of `Mean` and `InvStdDev` is `[d[0], ..., d[axis-1], 1, ..., 1]`.\n      `Y` and `X` have the same shape.\n",
+    "attributes": [
+      {
+        "name": "axis",
+        "type": "int64",
+        "required": false,
+        "default": -1,
+        "description": "The first normalization dimension. If rank(X) is r, axis' allowed range is [-r, r]. Negative value means counting dimensions from the back."
+      },
+      {
+        "name": "epsilon",
+        "type": "float32",
+        "required": false,
+        "default": 9.999999747378752e-06,
+        "description": "The epsilon value to use to avoid division by zero."
+      },
+      {
+        "name": "stash_type",
+        "type": "int64",
+        "required": false,
+        "default": 1,
+        "description": "Type of Mean and InvStdDev. This also specifies stage one's computation precision."
+      }
+    ],
+    "inputs": [
+      {
+        "name": "X",
+        "type": "T",
+        "description": "Tensor to be normalized."
+      },
+      {
+        "name": "Scale",
+        "type": "T",
+        "description": "Scale tensor."
+      },
+      {
+        "name": "B",
+        "type": "T",
+        "option": "optional",
+        "description": "Bias tensor."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 3,
+    "outputs": [
+      {
+        "name": "Y",
+        "type": "T",
+        "description": "Normalized tensor."
+      },
+      {
+        "name": "Mean",
+        "type": "U",
+        "option": "optional",
+        "description": "Saved mean used during training to speed up gradient computation"
+      },
+      {
+        "name": "InvStdDev",
+        "type": "U",
+        "option": "optional",
+        "description": "Saved inverse standard deviation used during training to speed up gradient computation."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 3,
+    "inputs_range": "2 - 3",
+    "outputs_range": "1 - 3",
+    "type_constraints": [
+      {
+        "description": "Constrain input types and output Y type to float tensors.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(float16)",
+          "tensor(float)",
+          "tensor(double)",
+          "tensor(bfloat16)"
+        ]
+      },
+      {
+        "description": "Type of Mean and InvStdDev tensors.",
+        "type_param_str": "U",
+        "allowed_type_strs": [
+          "tensor(float)",
+          "tensor(bfloat16)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "d",
+        "code": "X = np.random.randn(3, 4).astype(np.float32)\n\ndef case(axis: int) -> None:\n    normalized_shape = calculate_normalized_shape(X.shape, axis)\n    W = np.random.randn(*normalized_shape).astype(np.float32)\n    B = np.random.randn(*normalized_shape).astype(np.float32)\n    Y, mean, inv_std_dev = _layer_normalization(X, W, B, axis=axis)\n\n    node = onnx.helper.make_node(\n        'LayerNormalization',\n        inputs=['X', 'W', 'B'],\n        outputs=['Y', 'Mean', 'InvStdDev'],\n        axis=axis,\n    )\n\n    if axis < 0:\n        name = f'test_layer_normalization_2d_axis_negative_{-axis}'\n    else:\n        name = f'test_layer_normalization_2d_axis{axis}'\n\n    expect(node, inputs=[X, W, B], outputs=[Y, mean, inv_std_dev],\n           name=name)\n\nfor i in range(len(X.shape)):\n    case(i)\n    case(i - len(X.shape))"
+      },
+      {
+        "summary": "d_epsilon",
+        "code": "X = np.random.randn(2, 3, 5).astype(np.float32)\n\ndef case(axis: int) -> None:\n    normalized_shape = calculate_normalized_shape(X.shape, axis)\n    W = np.random.randn(*normalized_shape).astype(np.float32)\n    B = np.random.randn(*normalized_shape).astype(np.float32)\n    Y, mean, inv_std_dev = _layer_normalization(X, W, B, axis)\n    node = onnx.helper.make_node(\n        'LayerNormalization',\n        inputs=['X', 'W', 'B'],\n        outputs=['Y', 'Mean', 'InvStdDev'],\n        axis=axis,\n        epsilon=1e-1\n    )\n\n    if axis < 0:\n        name = f'test_layer_normalization_3d_axis_negative_{-axis}_epsilon'\n    else:\n        name = f'test_layer_normalization_3d_axis{axis}_epsilon'\n\n    expect(node, inputs=[X, W, B], outputs=[Y, mean, inv_std_dev],\n           name=name)\n\nfor i in range(len(X.shape)):\n    case(i)\n    case(i - len(X.shape))"
+      },
+      {
+        "summary": "default_axis",
+        "code": "X = np.random.randn(2, 3, 4, 5).astype(np.float32)\n\n# Default axis in LayerNormalization is -1.\nnormalized_shape = calculate_normalized_shape(X.shape, -1)\nW = np.random.randn(*normalized_shape).astype(np.float32)\nB = np.random.randn(*normalized_shape).astype(np.float32)\n# Axis is default to -1 in the reference implementation.\nY, mean, inv_std_dev = _layer_normalization(X, W, B)\n\n# Not specifying axis attribute means -1.\nnode = onnx.helper.make_node(\n    'LayerNormalization',\n    inputs=['X', 'W', 'B'],\n    outputs=['Y', 'Mean', 'InvStdDev']\n)\n\nexpect(node, inputs=[X, W, B], outputs=[Y, mean, inv_std_dev],\n        name='test_layer_normalization_default_axis')"
+      },
+      {
+        "summary": "layernormalization",
+        "code": "X = np.random.randn(2, 3, 4, 5).astype(np.float32)\n\ndef case(axis: int) -> None:\n    normalized_shape = calculate_normalized_shape(X.shape, axis)\n    W = np.random.randn(*normalized_shape).astype(np.float32)\n    B = np.random.randn(*normalized_shape).astype(np.float32)\n    Y, mean, inv_std_dev = _layer_normalization(X, W, B, axis)\n\n    node = onnx.helper.make_node(\n        'LayerNormalization',\n        inputs=['X', 'W', 'B'],\n        outputs=['Y', 'Mean', 'InvStdDev'],\n        axis=axis,\n    )\n\n    if axis < 0:\n        name = f'test_layer_normalization_4d_axis_negative_{-axis}'\n    else:\n        name = f'test_layer_normalization_4d_axis{axis}'\n\n    expect(node, inputs=[X, W, B], outputs=[Y, mean, inv_std_dev],\n           name=name)\n\nfor i in range(len(X.shape)):\n    case(i)\n    case(i - len(X.shape))"
+      }
+    ]
+  },
+  {
     "name": "LeakyRelu",
     "module": "ai.onnx",
     "version": 1,
