Add no-invalid-this lint rule

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "no-constructor-return": "error",
             "no-duplicate-imports": "error",
             "no-else-return": "error",
+            "no-invalid-this": "error",
             "no-promise-executor-return": "error",
             "no-self-compare": "error",
             "no-template-curly-in-string": "error",
