--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
             "no-duplicate-imports": "error",
             "no-else-return": "error",
             "no-invalid-this": "error",
+            "no-iterator": "error",
             "no-promise-executor-return": "error",
             "no-self-compare": "error",
             "no-template-curly-in-string": "error",
