Add no-labels lint rule

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
             "no-else-return": "error",
             "no-invalid-this": "error",
             "no-iterator": "error",
+            "no-labels": "error",
             "no-promise-executor-return": "error",
             "no-self-compare": "error",
             "no-template-curly-in-string": "error",
