Add no-lone-blocks lint rule

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
             "no-invalid-this": "error",
             "no-iterator": "error",
             "no-labels": "error",
+            "no-lone-blocks": "error",
             "no-promise-executor-return": "error",
             "no-self-compare": "error",
             "no-template-curly-in-string": "error",
