--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
             "no-lone-blocks": "error",
             "no-lonely-if": "error",
             "no-promise-executor-return": "error",
+            "no-proto": "error",
             "no-self-compare": "error",
             "no-template-curly-in-string": "error",
             "no-trailing-spaces": "error",
