--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -3370,7 +3370,7 @@
     "examples": [
       {
         "summary": "blackmanwindow",
-        "code": "node = onnx.helper.make_node(\n    'BlackmanWindow',\n    inputs=['x'],\n    outputs=['y'],\n)\nsize = np.int32(10)\na0 = 7938 / 18608\na1 = 9240 / 18608\na2 = 1430 / 18608\ny = a0\ny += a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\ny += a2 * np.cos(4 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\nexpect(node, inputs=[size], outputs=[y],\n       name='test_blackmanwindow')"
+        "code": "# Test periodic window\nnode = onnx.helper.make_node(\n    'BlackmanWindow',\n    inputs=['x'],\n    outputs=['y'],\n)\nsize = np.int32(10)\na0 = .42\na1 = -.5\na2 = .08\ny = a0\ny += a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\ny += a2 * np.cos(4 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\nexpect(node, inputs=[size], outputs=[y],\n       name='test_blackmanwindow')\n\n# Test symmetric window\nnode = onnx.helper.make_node(\n    'BlackmanWindow',\n    inputs=['x'],\n    outputs=['y'],\n    periodic=0\n)\nsize = np.int32(10)\na0 = .42\na1 = -.5\na2 = .08\ny = a0\ny += a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / (size - 1))\ny += a2 * np.cos(4 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / (size - 1))\nexpect(node, inputs=[size], outputs=[y],\n       name='test_blackmanwindow_symmetric')"
       }
     ]
   },
@@ -12053,7 +12053,7 @@
     "examples": [
       {
         "summary": "hammingwindow",
-        "code": "node = onnx.helper.make_node(\n    'HammingWindow',\n    inputs=['x'],\n    outputs=['y'],\n)\nsize = np.int32(10)\na0 = .5\na1 = .5\ny = a0 + a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\nexpect(node, inputs=[size], outputs=[y],\n       name='test_hammingwindow')"
+        "code": "# Test periodic window\nnode = onnx.helper.make_node(\n    'HammingWindow',\n    inputs=['x'],\n    outputs=['y'],\n)\nsize = np.int32(10)\na0 = 25 / 46\na1 = 1 - a0\ny = a0 - a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\nexpect(node, inputs=[size], outputs=[y],\n       name='test_hammingwindow')\n\n# Test symmetric window\nnode = onnx.helper.make_node(\n    'HammingWindow',\n    inputs=['x'],\n    outputs=['y'],\n    periodic=0\n)\nsize = np.int32(10)\na0 = 25 / 46\na1 = 1 - a0\ny = a0 - a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / (size - 1))\nexpect(node, inputs=[size], outputs=[y],\n       name='test_hammingwindow_symmetric')"
       }
     ]
   },
@@ -12128,7 +12128,7 @@
     "examples": [
       {
         "summary": "hannwindow",
-        "code": "node = onnx.helper.make_node(\n    'HannWindow',\n    inputs=['x'],\n    outputs=['y'],\n)\nsize = np.int32(10)\na0 = .5\na1 = .5\ny = a0 + a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\nexpect(node, inputs=[size], outputs=[y],\n       name='test_hannwindow')"
+        "code": "# Test periodic window\nnode = onnx.helper.make_node(\n    'HannWindow',\n    inputs=['x'],\n    outputs=['y'],\n)\nsize = np.int32(10)\na0 = .5\na1 = .5\ny = a0 - a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / size)\nexpect(node, inputs=[size], outputs=[y],\n       name='test_hannwindow')\n\n# Test symmetric window\nnode = onnx.helper.make_node(\n    'HannWindow',\n    inputs=['x'],\n    outputs=['y'],\n    periodic=0\n)\nsize = np.int32(10)\na0 = .5\na1 = .5\ny = a0 - a1 * np.cos(2 * 3.1415 * np.arange(0, size, 1, dtype=np.float32) / (size - 1))\nexpect(node, inputs=[size], outputs=[y],\n       name='test_hannwindow_symmetric')"
       }
     ]
   },
@@ -26609,7 +26609,7 @@
     "examples": [
       {
         "summary": "stft",
-        "code": "signal = np.arange(0, 128, dtype=np.float32).reshape(1, 128, 1)\nlength = np.array(16).astype(np.int64)\nstep = np.array(8).astype(np.int64)\n\nno_window = \"\"  # optional input, not supplied\nnode = onnx.helper.make_node(\n    'STFT',\n    inputs=['signal', 'frame_step', no_window, 'frame_length'],\n    outputs=['output'],\n)\n\nnstfts = ((signal.shape[1] - length) // step) + 1\n# [batch_size][frames][frame_length][2]\noutput = np.empty([1, nstfts, length, 2], dtype=np.float32)\nfor i in range(nstfts):\n    start = i * step\n    stop = i * step + length\n    complex_out = np.fft.fft(signal[0, start:stop, 0])\n    output[0, i] = np.stack((complex_out.real, complex_out.imag), axis=1)\n\nexpect(node, inputs=[signal, step, length], outputs=[output],\n       name='test_stft')\n\nnode = onnx.helper.make_node(\n    'STFT',\n    inputs=['signal', 'frame_step', 'window'],\n    outputs=['output'],\n)\n\n# Test with window\na0 = .5\na1 = .5\nwindow = a0 + a1 * np.cos(2 * 3.1415 * np.arange(0, length, 1, dtype=np.float32) / length)\nnstfts = 1 + (signal.shape[1] - window.shape[0]) // step\n\n# [batch_size][frames][frame_length][2]\noutput = np.empty([1, nstfts, length, 2], dtype=np.float32)\nfor i in range(nstfts):\n    start = i * step\n    stop = i * step + length\n    complex_out = np.fft.fft(signal[0, start:stop, 0] * window)\n    output[0, i] = np.stack((complex_out.real, complex_out.imag), axis=1)\nexpect(node, inputs=[signal, step, window], outputs=[output],\n       name='test_stft_with_window')"
+        "code": "signal = np.arange(0, 128, dtype=np.float32).reshape(1, 128, 1)\nlength = np.array(16).astype(np.int64)\nonesided_length = (length >> 1) + 1\nstep = np.array(8).astype(np.int64)\n\nno_window = \"\"  # optional input, not supplied\nnode = onnx.helper.make_node(\n    'STFT',\n    inputs=['signal', 'frame_step', no_window, 'frame_length'],\n    outputs=['output'],\n)\n\nnstfts = ((signal.shape[1] - length) // step) + 1\n# [batch_size][frames][frame_length][2]\noutput = np.empty([1, nstfts, onesided_length, 2], dtype=np.float32)\nfor i in range(nstfts):\n    start = i * step\n    stop = i * step + onesided_length\n    complex_out = np.fft.fft(signal[0, start:stop, 0])\n    output[0, i] = np.stack((complex_out.real, complex_out.imag), axis=1)\n\nexpect(node, inputs=[signal, step, length], outputs=[output],\n       name='test_stft')\n\nnode = onnx.helper.make_node(\n    'STFT',\n    inputs=['signal', 'frame_step', 'window'],\n    outputs=['output'],\n)\n\n# Test with window\na0 = .5\na1 = .5\nwindow = a0 + a1 * np.cos(2 * 3.1415 * np.arange(0, length, 1, dtype=np.float32) / length)\nnstfts = 1 + (signal.shape[1] - window.shape[0]) // step\n\n# [batch_size][frames][frame_length][2]\noutput = np.empty([1, nstfts, onesided_length, 2], dtype=np.float32)\nfor i in range(nstfts):\n    start = i * step\n    stop = i * step + length\n    complex_out = np.fft.fft(signal[0, start:stop, 0] * window)[0:onesided_length]\n    output[0, i] = np.stack((complex_out.real, complex_out.imag), axis=1)\nexpect(node, inputs=[signal, step, window], outputs=[output],\n       name='test_stft_with_window')"
       }
     ]
   },
