--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -4089,6 +4089,98 @@
     ]
   },
   {
+    "name": "CenterCropPad",
+    "module": "ai.onnx",
+    "version": 18,
+    "support_level": "common",
+    "description": "Center crop or pad an input to given dimensions.\n\nThe crop/pad dimensions can be specified for a subset of the `axes`. Non-specified dimensions will not be\ncropped or padded.\n\nIf the input dimensions are bigger than the crop shape, a centered cropping window is extracted from the input.\nIf the input dimensions are smaller than the crop shape, the input is padded on each side equally,\nso that the input is centered in the output.\n",
+    "attributes": [
+      {
+        "name": "axes",
+        "type": "int64[]",
+        "required": false,
+        "description": "If provided, it specifies a subset of axes that 'shape' refer to. If not provided, all axes are assumed [0, 1, ..., r-1], where r = rank(data). Negative value means counting dimensions from the back. Accepted range is [-r, r-1], where r = rank(data). Behavior is undefined if an axis is repeated."
+      }
+    ],
+    "inputs": [
+      {
+        "name": "input_data",
+        "type": "T",
+        "description": "Input to extract the centered crop from."
+      },
+      {
+        "name": "shape",
+        "type": "Tind",
+        "description": "1-D tensor representing the cropping window dimensions."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 2,
+    "outputs": [
+      {
+        "name": "output_data",
+        "type": "T",
+        "description": "Output data."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 1,
+    "type_constraints": [
+      {
+        "description": "Constrain input and output types to all tensor types.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(uint8)",
+          "tensor(uint16)",
+          "tensor(uint32)",
+          "tensor(uint64)",
+          "tensor(int8)",
+          "tensor(int16)",
+          "tensor(int32)",
+          "tensor(int64)",
+          "tensor(bfloat16)",
+          "tensor(float16)",
+          "tensor(float)",
+          "tensor(double)",
+          "tensor(string)",
+          "tensor(bool)",
+          "tensor(complex64)",
+          "tensor(complex128)"
+        ]
+      },
+      {
+        "description": "Constrain indices to integer types",
+        "type_param_str": "Tind",
+        "allowed_type_strs": [
+          "tensor(int32)",
+          "tensor(int64)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "center_crop_pad_crop",
+        "code": "node = onnx.helper.make_node(\n    'CenterCropPad',\n    inputs=['x', 'shape'],\n    outputs=['y'],\n)\n\n# First dim is even diff, second is uneven\nx = np.random.randn(20, 10, 3).astype(np.float32)\nshape = np.array([10, 7, 3], dtype=np.int64)\ny = x[5:15, 1:8, :]\n\nexpect(node, inputs=[x, shape], outputs=[y],\n       name='test_center_crop_pad_crop')"
+      },
+      {
+        "summary": "center_crop_pad_crop_and_pad",
+        "code": "node = onnx.helper.make_node(\n    'CenterCropPad',\n    inputs=['x', 'shape'],\n    outputs=['y'],\n)\n\n# Cropping on first dim, padding on second, third stays the same\nx = np.random.randn(20, 8, 3).astype(np.float32)\nshape = np.array([10, 10, 3], dtype=np.int64)\ny = np.zeros([10, 10, 3], dtype=np.float32)\ny[:, 1:9, :] = x[5:15, :, :]\n\nexpect(node, inputs=[x, shape], outputs=[y],\n       name='test_center_crop_pad_crop_and_pad')"
+      },
+      {
+        "summary": "center_crop_pad_crop_axes_chw",
+        "code": "node = onnx.helper.make_node(\n    'CenterCropPad',\n    inputs=['x', 'shape'],\n    outputs=['y'],\n    axes=[1, 2],\n)\n\n# Cropping on second dim, padding on third, first stays the same\nx = np.random.randn(3, 20, 8).astype(np.float32)\nshape = np.array([10, 9], dtype=np.int64)\ny = np.zeros([3, 10, 9], dtype=np.float32)\ny[:, :, :8] = x[:, 5:15, :]\n\nexpect(node, inputs=[x, shape], outputs=[y],\n       name='test_center_crop_pad_crop_axes_chw')"
+      },
+      {
+        "summary": "center_crop_pad_crop_axes_hwc",
+        "code": "node = onnx.helper.make_node(\n    'CenterCropPad',\n    inputs=['x', 'shape'],\n    outputs=['y'],\n    axes=[0, 1],\n)\n\n# Cropping on first dim, padding on second, third stays the same\nx = np.random.randn(20, 8, 3).astype(np.float32)\nshape = np.array([10, 9], dtype=np.int64)\ny = np.zeros([10, 9, 3], dtype=np.float32)\ny[:, :8, :] = x[5:15, :, :]\n\nexpect(node, inputs=[x, shape], outputs=[y],\n       name='test_center_crop_pad_crop_axes_hwc')"
+      },
+      {
+        "summary": "center_crop_pad_pad",
+        "code": "node = onnx.helper.make_node(\n    'CenterCropPad',\n    inputs=['x', 'shape'],\n    outputs=['y'],\n)\n\n# First dim is even diff, second is uneven\nx = np.random.randn(10, 7, 3).astype(np.float32)\nshape = np.array([20, 10, 3], dtype=np.int64)\ny = np.zeros([20, 10, 3], dtype=np.float32)\ny[5:15, 1:8, :] = x\n\nexpect(node, inputs=[x, shape], outputs=[y],\n       name='test_center_crop_pad_pad')"
+      }
+    ]
+  },
+  {
     "name": "Clip",
     "module": "ai.onnx",
     "version": 1,
@@ -20951,6 +21043,10 @@
         "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 0, 1, 3, 0, 0, 2, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2\n)\n\nexpect(node, inputs=[x, pads, value], outputs=[y],\n       name='test_constant_pad')"
       },
       {
+        "summary": "constant_pad_axes",
+        "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value', 'axes'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 3, 0, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\naxes = np.array([1, 3], dtype=np.int64)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2,\n    [1, 3],\n)\n\nexpect(node, inputs=[x, pads, value, axes], outputs=[y],\n       name='test_constant_pad_axes')"
+      },
+      {
         "summary": "reflection_and_edge_pad",
         "code": "for mode in ['edge', 'reflect']:\n    node = onnx.helper.make_node(\n        'Pad',\n        inputs=['x', 'pads'],\n        outputs=['y'],\n        mode=mode\n    )\n    x = np.random.randn(1, 3, 4, 5).astype(np.int32)\n    pads = np.array([0, 0, 1, 1, 0, 0, 1, 1]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\n    y = pad_impl(\n        x,\n        pads,\n        mode\n    )\n\n    expect(node, inputs=[x, pads], outputs=[y],\n           name=f'test_{mode}_pad')"
       }
@@ -21017,6 +21113,10 @@
       {
         "summary": "constant_pad",
         "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 0, 1, 3, 0, 0, 2, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2\n)\n\nexpect(node, inputs=[x, pads, value], outputs=[y],\n       name='test_constant_pad')"
+      },
+      {
+        "summary": "constant_pad_axes",
+        "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value', 'axes'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 3, 0, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\naxes = np.array([1, 3], dtype=np.int64)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2,\n    [1, 3],\n)\n\nexpect(node, inputs=[x, pads, value, axes], outputs=[y],\n       name='test_constant_pad_axes')"
       },
       {
         "summary": "reflection_and_edge_pad",
@@ -21093,6 +21193,10 @@
       {
         "summary": "constant_pad",
         "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 0, 1, 3, 0, 0, 2, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2\n)\n\nexpect(node, inputs=[x, pads, value], outputs=[y],\n       name='test_constant_pad')"
+      },
+      {
+        "summary": "constant_pad_axes",
+        "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value', 'axes'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 3, 0, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\naxes = np.array([1, 3], dtype=np.int64)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2,\n    [1, 3],\n)\n\nexpect(node, inputs=[x, pads, value, axes], outputs=[y],\n       name='test_constant_pad_axes')"
       },
       {
         "summary": "reflection_and_edge_pad",
@@ -21174,6 +21278,109 @@
       {
         "summary": "constant_pad",
         "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 0, 1, 3, 0, 0, 2, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2\n)\n\nexpect(node, inputs=[x, pads, value], outputs=[y],\n       name='test_constant_pad')"
+      },
+      {
+        "summary": "constant_pad_axes",
+        "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value', 'axes'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 3, 0, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\naxes = np.array([1, 3], dtype=np.int64)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2,\n    [1, 3],\n)\n\nexpect(node, inputs=[x, pads, value, axes], outputs=[y],\n       name='test_constant_pad_axes')"
+      },
+      {
+        "summary": "reflection_and_edge_pad",
+        "code": "for mode in ['edge', 'reflect']:\n    node = onnx.helper.make_node(\n        'Pad',\n        inputs=['x', 'pads'],\n        outputs=['y'],\n        mode=mode\n    )\n    x = np.random.randn(1, 3, 4, 5).astype(np.int32)\n    pads = np.array([0, 0, 1, 1, 0, 0, 1, 1]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\n    y = pad_impl(\n        x,\n        pads,\n        mode\n    )\n\n    expect(node, inputs=[x, pads], outputs=[y],\n           name=f'test_{mode}_pad')"
+      }
+    ],
+    "category": "Tensor"
+  },
+  {
+    "name": "Pad",
+    "module": "ai.onnx",
+    "version": 18,
+    "support_level": "common",
+    "description": "Given a tensor containing the data to be padded (`data`), a tensor containing the number of start and end pad values for axis (`pads`), (optionally) a `mode`, and (optionally) `constant_value`,\na padded tensor (`output`) is generated.\n\nThe three supported `modes` are (similar to corresponding modes supported by `numpy.pad`):\n\n1) `constant`(default) - pads with a given constant value as specified by `constant_value` (which defaults to 0, empty string, or False)\n\n2) `reflect` - pads with the reflection of the vector mirrored on the first and last values of the vector along each axis\n\n3) `edge` - pads with the edge values of array\n\n\nExample 1 (`constant` mode):\n  Insert 0 pads to the beginning of the second dimension.\n\n  data =\n  [\n      [1.0, 1.2],\n      [2.3, 3.4],\n      [4.5, 5.7],\n  ]\n\n  pads = [0, 2, 0, 0]\n\n  mode = 'constant'\n\n  constant_value = 0.0\n\n  output =\n  [\n      [0.0, 0.0, 1.0, 1.2],\n      [0.0, 0.0, 2.3, 3.4],\n      [0.0, 0.0, 4.5, 5.7],\n  ]\n\n\nExample 2 (`reflect` mode):\n  data =\n  [\n      [1.0, 1.2],\n      [2.3, 3.4],\n      [4.5, 5.7],\n  ]\n\n  pads = [0, 2, 0, 0]\n\n  mode = 'reflect'\n\n  output =\n  [\n      [1.0, 1.2, 1.0, 1.2],\n      [2.3, 3.4, 2.3, 3.4],\n      [4.5, 5.7, 4.5, 5.7],\n  ]\n\n\nExample 3 (`edge` mode):\n  data =\n  [\n      [1.0, 1.2],\n      [2.3, 3.4],\n      [4.5, 5.7],\n  ]\n\n  pads = [0, 2, 0, 0]\n\n  mode = 'edge'\n\n  output =\n  [\n      [1.0, 1.0, 1.0, 1.2],\n      [2.3, 2.3, 2.3, 3.4],\n      [4.5, 4.5, 4.5, 5.7],\n  ]\n\n",
+    "attributes": [
+      {
+        "name": "mode",
+        "type": "string",
+        "required": false,
+        "default": "constant",
+        "description": "Supported modes: `constant`(default), `reflect`, `edge`"
+      }
+    ],
+    "inputs": [
+      {
+        "name": "data",
+        "type": "T",
+        "description": "Input tensor."
+      },
+      {
+        "name": "pads",
+        "type": "tensor(int64)",
+        "description": "Tensor of integers indicating the number of padding elements to add or remove (if negative) at the beginning and end of each axis. For 2D input tensor, it is the number of pixels. `pads` should be a 1D tensor of shape [2 * num_axes] where `num_axes` refers to the number of elements in the `axes` input or the input rank if `axes` are not provided explicitly. `pads` format should be: [x1_begin, x2_begin, ..., x1_end, x2_end,...], where xi_begin is the number of pad values added at the beginning of axis `axes[i]` and xi_end, the number of pad values added at the end of axis `axes[i]`."
+      },
+      {
+        "name": "constant_value",
+        "type": "T",
+        "option": "optional",
+        "description": "(Optional) A scalar value to be used if the mode chosen is `constant` (by default it is 0, empty string or False)."
+      },
+      {
+        "name": "axes",
+        "type": "Tind",
+        "option": "optional",
+        "description": "1-D tensor of axes that `pads` apply to. Negative value means counting dimensions from the back. Accepted range is [-r, r-1] where r = rank(data). Behavior is undefined if an axis is repeated. If not provided, all axes are assumed (`[0, 1, ..., input_rank-1]`)."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 4,
+    "outputs": [
+      {
+        "name": "output",
+        "type": "T",
+        "description": "Tensor after padding."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 1,
+    "inputs_range": "2 - 4",
+    "type_constraints": [
+      {
+        "description": "Constrain input and output types to all tensor types.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(uint8)",
+          "tensor(uint16)",
+          "tensor(uint32)",
+          "tensor(uint64)",
+          "tensor(int8)",
+          "tensor(int16)",
+          "tensor(int32)",
+          "tensor(int64)",
+          "tensor(bfloat16)",
+          "tensor(float16)",
+          "tensor(float)",
+          "tensor(double)",
+          "tensor(string)",
+          "tensor(bool)",
+          "tensor(complex64)",
+          "tensor(complex128)"
+        ]
+      },
+      {
+        "description": "Constrain indices to integer types",
+        "type_param_str": "Tind",
+        "allowed_type_strs": [
+          "tensor(int32)",
+          "tensor(int64)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "constant_pad",
+        "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 0, 1, 3, 0, 0, 2, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2\n)\n\nexpect(node, inputs=[x, pads, value], outputs=[y],\n       name='test_constant_pad')"
+      },
+      {
+        "summary": "constant_pad_axes",
+        "code": "node = onnx.helper.make_node(\n    'Pad',\n    inputs=['x', 'pads', 'value', 'axes'],\n    outputs=['y'],\n    mode='constant'\n)\nx = np.random.randn(1, 3, 4, 5).astype(np.float32)\npads = np.array([0, 3, 0, 4]).astype(np.int64)  # pad order [x1_begin, x2_begin, ..., x1_end, x2_end, ...]\nvalue = np.float32(1.2)\naxes = np.array([1, 3], dtype=np.int64)\ny = pad_impl(\n    x,\n    pads,\n    'constant',\n    1.2,\n    [1, 3],\n)\n\nexpect(node, inputs=[x, pads, value, axes], outputs=[y],\n       name='test_constant_pad_axes')"
       },
       {
         "summary": "reflection_and_edge_pad",
